--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_CANDY_MACHINE_ID=6sUZJW64XKJSnbDxVqmCnYdiiNf1V8PdR9iotei1Yauv
 
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
